unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/breadwinner_ns__BW_Item_Price__c.object-meta.xml
<CustomObject>
    <label>NetSuite Item Price</label>
    <nameField>
        <label>NetSuite Item Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Item Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>