unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__CurrencyName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CurrencyName__c</fullName>
    <label>Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>