unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Customer__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>NetSuite Item Pricing</relationshipLabel>
    <relationshipName>BWItemPrices</relationshipName>
    <type>Lookup</type>
</CustomField>