unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Do_Not_Match__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_Not_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Match</label>
    <type>Checkbox</type>
</CustomField>