unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>breadwinner_ns__BW_Item__c</referenceTo>
    <relationshipLabel>NetSuite Pricing</relationshipLabel>
    <relationshipName>BWItemPrices</relationshipName>
    <type>Lookup</type>
</CustomField>