unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Item_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Item_Price_Type__c</fullName>
    <label>Item Price Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>