unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__PriceLevel__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PriceLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Level</label>
    <referenceTo>breadwinner_ns__BW_Price_Level__c</referenceTo>
    <relationshipLabel>NetSuite Item Prices</relationshipLabel>
    <relationshipName>BWItemPrices</relationshipName>
    <type>Lookup</type>
</CustomField>