unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Quantity_02__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Quantity_02__c</fullName>
    <label>Quantity 02</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>