unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/fields/breadwinner_ns__Value_01__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Value_01__c</fullName>
    <label>Value 01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>