unpackaged/main/default/objects/breadwinner_ns__BW_Item_Price__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Item_Price_Type__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__Item__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <columns>breadwinner_ns__PriceLevel__c</columns>
    <columns>breadwinner_ns__Quantity_01__c</columns>
    <columns>breadwinner_ns__Value_01__c</columns>
    <columns>breadwinner_ns__Quantity_02__c</columns>
    <columns>breadwinner_ns__Value_02__c</columns>
    <columns>breadwinner_ns__Quantity_03__c</columns>
    <columns>breadwinner_ns__Value_03__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>